--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,9 +10,29 @@ html {
 }
 
 .default-page-setup {
-    background-color: #FEF5E7;
+    background-color: #D6F8FF; /* #FEF5E7; */
     min-height: 100vh; /* Makes the background fill the entire screen height */
     padding: 3rem;
+}
+
+.noise-color {
+  background-color: #F8E080;
+}
+
+.humidity-color {
+  background-color: #52B1D2;
+}
+
+.temperature-color {
+  background-color: #FFB46B;
+}
+
+.light-color {
+  background-color: #BBEEDD;
+}
+
+.white-background {
+    background-color: white;
 }
 
 .site-title {
@@ -46,7 +66,7 @@ html {
 
 /* Gives each cards a background color, round corners, and some shadows */
 .card {
-  background: white;
+  border: 1px solid #03045E;
   border-radius: 12px;
   padding: 20px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.1);
