--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,9 +10,15 @@ html {
 }
 
 .default-page-setup {
-    background-color: #EFF6E0;
-    min-height: 100vh; /* Makes the background fill the entire screen height */
-    padding: 3rem;
+  background-color: #EFF6E0;
+  margin-left: 60px; /* plads til sidenav */
+  min-height: 100vh; /* Makes the background fill the entire screen height */
+  padding: 3rem;
+}
+
+.site-title {
+  font-size: 20px;
+  color: white;
 }
 
 .noise-color {
